--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I like to solve coding problems &amp; uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/Subhamsoni2701" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/sonisubham2701" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
