--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex ftco-animate">
+          <!--<div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
@@ -449,7 +449,7 @@
           </div>
         </div>
 	<br>
-		<!-- added justify-content-center to center align the last two projects -->
+		 added justify-content-center to center align the last two projects -->
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
@@ -474,7 +474,7 @@
 			  </div>
 			</div>
 		 </div>
-	  </div>
+	  </div>-->
     </section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
