--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Making My Jarvic-project using Python </a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
+                <p>Developed "Jarvic," a Python-based voice assistant, similar to Alexa, designed to execute voice commands and provide personalized assistance.</p>
               </div>
             </div>
           </div>
@@ -449,7 +449,7 @@
           </div>
         </div>
 	<br>
-		 added justify-content-center to center align the last two projects -->
+		 added justify-content-center to center align the last two projects 
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
