--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="#" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+				<p><a href="https://drive.google.com/file/d/1-3Bd_VSWgM-q3jVu1tNCFV3p59gZok6g/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
 			</div>
 		</div>
 	</div>
