--- a/index.html
+++ b/index.html
@@ -425,18 +425,18 @@
               </div>
             </div>
           </div>
-          <!--<div class="col-md-4 d-flex ftco-animate">
+          <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/sonisubham2701/Flapping-Bird-Java" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Developed "Jarvic," a Python-based voice assistant, similar to Alexa, designed to execute voice commands and provide personalized assistance.</p>
+                <h3 class="heading"><a href="https://github.com/sonisubham2701/Flapping-Bird-Java">Java Developer - Flapping Bird Game Implementation.</a></h3>
+                <p>I will create the flappy bird game with the built-in java awt/swing graphics library.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex ftco-animate">
+         <!-- <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
