--- a/index.html
+++ b/index.html
@@ -442,28 +442,28 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Heart Disease Prediction using Machine Learning </a></h3>
+                <h3 class="heading"><a href="https://colab.research.google.com/drive/1sIErSc1j6Y9yLj2q5PmbrSSOu1r16Zid">Heart Disease Prediction using Machine Learning </a></h3>
                 <p>Built a machine learning model in Python to predict heart disease using patient data.</p>
               </div>
             </div>
           </div>
-		<!--
+		
         </div>
 	<br>
 		 added justify-content-center to center align the last two projects 
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/sonisubham2701/TechBlog_project_java" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
-				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
+				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">TechBlog-Java Project</a></h3>
+				  <p>Built a blogging platform using Hibernate, Java Servlet, and Spring Framework.</p>
 				</div>
 			  </div>
 			</div>
-			<div class="col-md-4 d-flex ftco-animate">
+			<!--<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
