--- a/index.html
+++ b/index.html
@@ -463,19 +463,19 @@
 				</div>
 			  </div>
 			</div>
-			<!--<div class="col-md-4 d-flex ftco-animate">
+			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/sonisubham2701/flutter_application_1" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">E-Learning Platform</a></h3>
+				  <p>Developed a full-stack e-learning platform using Flutter and Dart for the frontend, Node.js for the backend, and Firebase for real-time data management.</p>
 				</div>
 			  </div>
 			</div>
 		 </div>
-	  </div>-->
+	  </div>
     </section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
