--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="https://drive.google.com/file/d/1-3Bd_VSWgM-q3jVu1tNCFV3p59gZok6g/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+				<p><a href="https://drive.google.com/drive/u/2/home" class="btn btn-primary py-4 px-5">Download Resume</a></p>
 			</div>
 		</div>
 	</div>
@@ -410,7 +410,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
+            <p>Below are the sample Data Analytics projects on Java, Python & ML Project.</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -450,7 +450,6 @@
 		
         </div>
 	<br>
-		 added justify-content-center to center align the last two projects 
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
@@ -559,7 +558,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+ 0 101 0101 101</a></p>
+	            <p><a href="tel://0101010101">+91-9616123888</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -568,7 +567,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">conctact@domainname.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">sonisubham2701@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -577,7 +576,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">resumelink</a></p>
+	            <p><a href="#">https://drive.google.com/drive/u/2/home</a></p>
 	          </div>
           </div>
 
@@ -606,7 +605,7 @@
 
  
 	
-   <!-- <footer class="ftco-footer ftco-section">
+   <!--<footer class="ftco-footer ftco-section">
 		<div class="container">
 		  <div class="row">
 			<div class="col-md-12 text-center">
