--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="https://drive.google.com/drive/u/2/home" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+				<p><a href="https://drive.google.com/file/d/1Mbq55m6ndjZ0J1WtEDCx3jyWo1zHAqVF/view?usp=drivesdk" class="btn btn-primary py-4 px-5">Download Resume</a></p>
 			</div>
 		</div>
 	</div>
@@ -576,7 +576,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="#">https://drive.google.com/drive/u/2/home</a></p>
+	            <p><a href="#">https://drive.google.com/file/d/1Mbq55m6ndjZ0J1WtEDCx3jyWo1zHAqVF/view?usp=drivesdk</a></p>
 	          </div>
           </div>
 
