--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
 		<div class="row d-flex justify-content-center">  
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/sonisubham2701/Jarvic-project" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+				<a href="https://github.com/sonisubham2701/TechBlog_project_java.git" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/sonisubham2701/Jarvic-project">TechBlog-Java Project</a></h3>
+				  <h3 class="heading"><a href="https://github.com/sonisubham2701/TechBlog_project_java.git">TechBlog-Java Project</a></h3>
 				  <p>Built a blogging platform using Hibernate, Java Servlet, and Spring Framework.</p>
 				</div>
 			  </div>
